@@ -5,3 +5,4 @@ Installation:
 	2. In the Warlay folder run: mvn clean install 
 	3. Open the jar in Warlay\target\ with: java -jar target/Warlay-1.0-jar-with-dependencies.jar
 	4. You can create riports with: mvn site and mvn clover:instrument
+	For Intellij the following VM options might be required --module-path %PATH_TO_FX_LIB% --add-modules javafx.controls,javafx.fxml
